--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     "recharts": "https://aistudiocdn.com/recharts@^3.2.1",
     "geojson": "https://aistudiocdn.com/geojson@^0.5.0",
     "topojson-client": "https://aistudiocdn.com/topojson-client@^3.1.0",
-    "d3": "https://aistudiocdn.com/d3@^7.9.0"
+    "d3": "https://aistudiocdn.com/d3@^7.9.0",
+    "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1"
   }
 }
 </script>
